--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -132,6 +132,26 @@ year = "Stand 31.05.2015"
 	note = "{http://projecteuclid.org/euclid.bams/1183492347}"
 }
 
+ @article{schottstaedt,
+     title = {The Simulation of Natural Instrument Tones using Frequency Modulation with a Complex Modulating 
+Wave},
+     author = {Schottstaedt, B.},
+     journal = {Computer Music Journal},
+     volume = {1},
+     number = {4},
+     pages = {pp. 46-50},
+     url = {http://www.jstor.org/stable/40731300},
+     ISSN = {01489267},
+     year = {1977},
+     publisher = {The MIT Press}
+    }
+
+@Misc{schottiWeb,
+author = {Schottstaedt, B.},
+title = {Introduction to FM},
+howpublished = {https://ccrma.stanford.edu/software/snd/snd/fm.html}
+}
+
 %Gary
 @book{stotz,
   title={Computergest{\"u}tzte Audio- und Videotechnik: Multimediatechnik in der Anwendung - 2. Aufl.},
@@ -149,3 +169,35 @@ year = "Stand 31.05.2015"
   pages =        "398-409",
   year =         "1998"
 }
+
+%Matze=======================================================
+
+%@article{schottstaedt,
+%title = {The Simulation of Natural Instrument Tones using Frequency Modulation with a Complex Modulating 
+%Wave},
+%author = {Schottstaedt, B.},
+%journal = {Computer Music Journal},
+%volume = {1},
+%number = {4},
+%pages = {pp. 46-50},
+%url = {http://www.jstor.org/stable/40731300},
+%ISSN = {01489267},
+%year = {1977},
+%publisher = {The MIT Press}
+%}
+
+%@Misc{schottiWeb,
+%author = {Schottstaedt, B.},
+%title = {Introduction to FM},
+%howpublished = {https://ccrma.stanford.edu/software/snd/snd/fm.html}
+%}
+
+%@book{abramowitz,
+  %title={Handbook of Mathematical Functions: With Formulas, Graphs, and Mathematical Tables},
+  %author={Abramowitz, M. and Stegun, I.A.},
+  %isbn={0-486-61272-4},
+  %series={Applied mathematics series},
+  %url={http://people.math.sfu.ca/~cbm/aands/frameindex.htm},
+  %year={1964},
+  %publisher={Dover Publications}
+%}
